{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 328,
  "lineage": "09fa7940-1899-c142-f0e5-4fd00d9be709",
  "resources": [
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:loadbalancer/app/VIP-alb/d03c9be8c64089b3",
            "arn_suffix": "app/VIP-alb/d03c9be8c64089b3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "VIP-alb-1077665490.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:352215179221:loadbalancer/app/VIP-alb/d03c9be8c64089b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "VIP-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a6c6ea91d96acac2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c91c2f234d1c70d2"
              },
              {
                "subnet_id": "subnet-0cd4b109ea9143fff"
              }
            ],
            "subnets": [
              "subnet-0c91c2f234d1c70d2",
              "subnet-0cd4b109ea9143fff"
            ],
            "tags": {
              "Name": "VIP-alb"
            },
            "tags_all": {
              "Name": "VIP-alb"
            },
            "vpc_id": "vpc-0ce955d0ffe0ac126",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security-group.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:listener/app/VIP-alb/d03c9be8c64089b3/2ab24ebd14721e63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:352215179221:listener/app/VIP-alb/d03c9be8c64089b3/2ab24ebd14721e63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:loadbalancer/app/VIP-alb/d03c9be8c64089b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.application_load_balancer",
            "module.security-group.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:listener/app/VIP-alb/d03c9be8c64089b3/c51b66fc9ce47c30",
            "certificate_arn": "arn:aws:acm:us-west-2:352215179221:certificate/56fdf442-b75f-428e-8714-b195fdb196d4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:targetgroup/VIP-tg/446f91e420b2588d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:352215179221:listener/app/VIP-alb/d03c9be8c64089b3/c51b66fc9ce47c30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:loadbalancer/app/VIP-alb/d03c9be8c64089b3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.application_load_balancer",
            "module.application_load_balancer.aws_lb_target_group.target_group",
            "module.security-group.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:targetgroup/VIP-tg/446f91e420b2588d",
            "arn_suffix": "targetgroup/VIP-tg/446f91e420b2588d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:352215179221:targetgroup/VIP-tg/446f91e420b2588d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "VIP-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce955d0ffe0ac126"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:352215179221:targetgroup/VIP-tg/446f91e420b2588d-20230330063919539000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:352215179221:targetgroup/VIP-tg/446f91e420b2588d",
            "target_id": "i-06b7f1a70d13203a6"
          },
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.target_group",
            "module.ec2.aws_instance.ubuntu",
            "module.security-group.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b029b1931b347543",
            "arn": "arn:aws:ec2:us-west-2:352215179221:instance/i-06b7f1a70d13203a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b7f1a70d13203a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026917873e2e8f104",
            "private_dns": "ip-174-5-1-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "174.5.1.47",
            "public_dns": "ec2-52-34-10-28.us-west-2.compute.amazonaws.com",
            "public_ip": "52.34.10.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04856182df7a9444d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a6c6ea91d96acac2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd4b109ea9143fff",
            "tags": {
              "Name": "terraform_demo"
            },
            "tags_all": {
              "Name": "terraform_demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6c6ea91d96acac2"
            ]
          },
          "dependencies": [
            "module.security-group.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:352215179221:security-group/sg-0a6c6ea91d96acac2",
            "description": "Security group using Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6c6ea91d96acac2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security group using Terraform module",
            "name_prefix": "",
            "owner_id": "352215179221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIP_SG"
            },
            "tags_all": {
              "Name": "VIP_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce955d0ffe0ac126"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}